# Facul

./: README.md
TrabalhoFinal_driver/driver/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .pico_usb.ko.cmd  .pico_usb.mod.cmd  .pico_usb.mod.o.cmd  .pico_usb.o.cmd  Makefile  Makefile.backup  modules.order  pico_usb.c  pico_usb.ko  pico_usb.mod  pico_usb.mod.c  test_app.c
TrabalhoFinal_driver/pico_firware/: CMakeLists.txt  main.c  pico_firmware.c  pico_sensor_usb.c  pico_usb_ids.h  tusb_config.h  usb_descriptors.c  usb_descriptors_backup.c
